# agent-handoff-template

./: .gitignore  .ignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SESSION_HANDOFF.md  pyproject.toml  repoctl-upgrade-manifest.json
.agent/workflows/: db_migration.md
.claude/: settings.json  settings.maintenance.json
.claude/agents/: README.md  maintenance-cartographer.md  maintenance-evaluator.md  maintenance-implementer.md  maintenance-plan-critic.md  maintenance-planner.md  maintenance-skeptic.md
.claude/hooks/: capture_subagent_start.sh  capture_subagent_tool_event.sh  capture_subagent_trace.sh  enforce_subagent_final_report.sh  run_prompt_context.sh  run_python_module.sh
.cursor/rules/: 00-agent-os.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
ai/sync/: README.md
docs/: BOARD.md  GRAPH_CONTEXT_LLMWIKI_MASTER_PLAN.md  GRAPH_CONTEXT_LLMWIKI_TECHNOLOGY_BENCHMARK_MAP.md  MAINTENANCE_HARNESS_CONTRACT.md  PRD.md  README.md  REPOS.md  TASK.md  TASKS.md  TECHNOLOGY_BENCHMARK_REPORT.md  TECH_SELECTION_VERIFICATION_DIRECTIVE.md
docs/adr/: evidence-context-authority-v0.md  repoctl-graph-v0.md  repometa-identity-v0.md
docs/archive/: README.md
docs/contracts/: repoctl-context-contract.md  repoctl-graph-contract.md  repoctl-json-contract.md  repoctl-module-boundaries.md
docs/field-tests/: graph-context-llmwiki-v1.md
examples/: AGENTS.md.example  CLAUDE.md.example  cursor-rule.mdc.example  windsurf-rule.md.example
project/: BOARD.md  PRD.md  TASKS.md
scripts/: repoctl
tests/: test_permissions_registry.py
(+155 files in other folders)
