[project]
name = "agent-handoff-template-workspace"
version = "0.3.0"
description = "Workspace maintenance tooling for the agent handoff template"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.setuptools.packages.find]
include = ["tools*"]

[dependency-groups]
dev = [
  "pytest>=9.0.3"
]
